added fix to quiz issue