@@ -3,13 +3,12 @@ package vacademy.io.admin_core_service.features.slide.entity;
 import jakarta.persistence.*;
 import lombok.Getter;
 import lombok.Setter;
-import lombok.ToString;
-import org.hibernate.annotations.UuidGenerator;
 import vacademy.io.admin_core_service.features.common.entity.RichTextData;
 import vacademy.io.admin_core_service.features.slide.dto.VideoSlideQuestionDTO;
 
 import java.sql.Timestamp;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Entity
 @Getter
@@ -92,7 +91,7 @@ public class VideoSlideQuestion {
         if (dto.getOptions() != null) {
             this.options = dto.getOptions().stream()
                     .map(optDto -> new VideoSlideQuestionOption(optDto, this))
-                    .toList();
+                    .collect(Collectors.toList());
         }
     }
 
